--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: test
       POSTGRES_DB: book-store
-    volumes:
-      - db-data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+#    volumes:
+#      - db-data:/var/lib/postgresql/data
+#      - ./data.sql:/docker-entrypoint-initdb.d/data.sql
     ports:
       - "5432:5432"
+    restart: on-failure
 
   app:
     image: ristovvski/devopsbookproject:latest
