Changed connection string and added Kubernetes files

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/book-store
+spring.datasource.url=jdbc:postgresql://postgres:5432/book-store
 spring.datasource.username=postgres
 spring.datasource.password=test
 ## default connection pool
