--- a/kubernetes/postgres-configmap.yaml
+++ b/kubernetes/postgres-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres-conf
+#  namespace: book-store-ns
 data:
-  host: localhost
+  host: postgres
   name: book-store
