--- a/kubernetes/postgres-credentials.yaml
+++ b/kubernetes/postgres-credentials.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-credentials
+#  namespace: book-store-ns
 data:
   postgres_user: cG9zdGdyZXM=
   postgres_password: dGVzdA==
