--- a/kubernetes/postgres-deployment.yaml
+++ b/kubernetes/postgres-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+#  namespace: book-store-ns
   labels:
     app: postgres
     tier: database
@@ -17,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pv-claim
+#  namespace: book-store-ns
   labels:
     app: postgres
     tier: database
@@ -32,6 +34,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
+#  namespace: book-store-ns
   labels:
     app: postgres
     tier: database
